compact key test finish